--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 
 
 <body>
-  <canvas id="my-canvas"></canvas>
+  <canvas id="canvas"></canvas>
 
   <!-- Libraries --> 
-  <script type="text/javascript" src="Libraries/utils.js"></script>
-  <script type="text/javascript" src="Libraries/webgl-obj-loader.min.js"></script>
+  <script type="text/javascript" src="libraries/utils.js"></script>
+  <script type="text/javascript" src="libraries/webgl-obj-loader.min.js"></script>
+
 
 
   <!--Scripts-->
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 
 
 </body>
