--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
         background-color: white;
       }
     </style>
-    
-  <script type="text/javascript" src="lib/utils.js"></script>
-  <script type="text/javascript" src="lib/cubeDefinition.js"></script>
-  <script type="text/javascript" src="lib/script.js"></script>
 </head>
 
+
 <body>
-  <canvas id="c"></canvas>
+  <canvas id="canvas"></canvas>
+
+  <!-- Libraries --> 
+  <script type="text/javascript" src="libraries/utils.js"></script>
+  <script type="text/javascript" src="libraries/webgl-obj-loader.min.js"></script>
+
+
+
+  <!--Scripts-->
+  <script type="text/javascript" src="script.js"></script>
+
+
 </body>
 
 </html>
