--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
 
   <!--Scripts-->
+  <script type="text/javascript" src="gameLogic/controller.js"></script>
+  
   <script type="text/javascript" src="script.js"></script>
 
 
