starting logic and controller

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     <script type="text/javascript" src="libraries/webgl-obj-loader.min.js"></script>
 
     <!--Scripts-->
-    <script type="text/javascript" src="logic/controller.js"></script>   
- 
+    <script type="text/javascript" src="logic/Vec2.js"></script>
+    <script type="text/javascript" src="logic/Ball.js"></script>   
+    <script type="text/javascript" src="logic/Paddle.js"></script>   
+
+    <script type="text/javascript" src="logic/matrices.js"></script> 
+    <script type="text/javascript" src="logic/controller.js"></script>  
+
     <script type="text/javascript" src="script.js"></script>
   
 </head>
