--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <!--Scripts-->
     <script type="text/javascript" src="logic/Vec2.js"></script>
-    <script type="text/javascript" src="logic/Ball.js"></script>   
+    <script type="text/javascript" src="logic/constants.js"></script>
+    <script type="text/javascript" src="logic/Ball.js"></script>
+    <script type="text/javascript" src="logic/Brick.js"></script>      
     <script type="text/javascript" src="logic/Paddle.js"></script>   
 
     <script type="text/javascript" src="logic/matrices.js"></script> 
