game initialization complete with walls

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <script type="text/javascript" src="logic/constants.js"></script>
     <script type="text/javascript" src="logic/Ball.js"></script>
     <script type="text/javascript" src="logic/Brick.js"></script>      
-    <script type="text/javascript" src="logic/Paddle.js"></script>   
+    <script type="text/javascript" src="logic/Paddle.js"></script>
+    <script type="text/javascript" src="logic/Wall.js"></script>      
 
     <script type="text/javascript" src="logic/matrices.js"></script> 
     <script type="text/javascript" src="logic/controller.js"></script>  
