--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Arkanoid</title>
 
+    <style type="text/css">
+      body {
+        overflow: hidden;
+        margin: 0px;
+        width:  100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-color: black;
+      }
+    </style>
 
     <!-- Libraries --> 
     <script type="text/javascript" src="libraries/utils.js"></script>
@@ -31,7 +42,6 @@
   <canvas id="canvas">
     Your browser does not support the HTML5 canvas element.
   </canvas>
-
 
 
 </body>
